# ALASTR

./: .gitignore  README.md  pyproject.toml  requirements.auto.in  requirements.in  requirements.lock.txt  requirements.txt  setup.py
src/alastr/: __init__.py  main.py
src/alastr/analyses/: graphemes.py  lexicon.py  mechanics.py  morphology.py  ngrams.py  phonology.py  semantics.py  syntax.py
src/alastr/analyses/lexicon/: lexicon.py
src/alastr/analyses/ngrams/: ngrams.py
src/alastr/analyses/semantics/: semantic_scoring.py  semantics.py
src/alastr/backend/eda/: visualization.py
src/alastr/backend/etl/: IOManager.py  OutputManager.py  SQLDaemon.py  Table.py
src/alastr/backend/nlp/: NLPmodel.py  data_processing.py  preprocessing.py  sample_prep.py
src/alastr/backend/pipeline/: PipelineManager.py
src/alastr/backend/tools/: Tier.py  Tier_old.py  auxiliary.py  config_io.py  extract_imports.py  tier_parsing.py
src/alastr/utils/: PipelineManager.py  section_config.py
src/elasticas/: __init__.py  main.py
src/elasticas/analyses/: graphemes.py  lexicon.py  mechanics.py  morphology.py  phonology.py  semantics.py  syntax.py
src/elasticas/backend/eda/: visualization.py
src/elasticas/backend/etl/: OutputManager.py  Table.py
src/elasticas/backend/nlp/: preprocessing.py
src/elasticas/backend/pipeline/: PipelineManager.py
src/elasticas/utils/: PipelineManager.py
webapp/: config_builder.py  streamlit_app.py
